Added direction and gravity box

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <h1>Combobox!</h1>
 
 <script type="module">
-  import init from '/out/combobox-game.js'
+  import init from 'out/combobox-game.js'
   init()
 </script>
 
