fixing github pages

--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
       background-color: white;
     }
   </style>
+
+  <link rel="preload" href="out/combobox-game_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
+  <link rel="modulepreload" href="out/combobox-game.js">
 </head>
 
 <h1>Combobox!</h1>
 
 <script type="module">
-  import init from 'out/combobox-game.js'
+  import init from './out/combobox-game.js'
   init()
 </script>
 
